section donat addad

--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:wght@500&family=Roboto&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div id="donat">
+            <h1 class="wechange">We are working today to</h1>
+            <h1 class="wechange">change tomorrow!</h1>
+            <p id="mission">your gift will help us find our mission help those in need. Together, we can make a
+                difference.Our main focus is to help the poor and needy people.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mdrayhan.chowdhury.904">Donate Now</a>
+        </div>
 
+    </section>
 </body>
 
 </html>
