donate and donate plane added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
                 difference.Our main focus is to help the poor and needy people.</p>
             <a class="link-button" target="_blank" href="https://www.facebook.com/mdrayhan.chowdhury.904">Donate Now</a>
         </div>
+    </section>
+    <section>
+        <div>
+            <h1 id="dt">Donate Today</h1>
+            <p id="today">Today's help can be a smile on someone's face and a meal for someone.</p><br><br><br><br>
+            <h1 class="tk">100tk</h1>
+            <h1 class="tk" id="tow">200tk</h1>
+            <h1 class="tk">500tk</h1>
+            <h1 class="tk">1000tk</h1>
+            <h1 class="tk">5000tk</h1><br><br><br><br><br>
+            <p id="amount"><u>Other Amount (taka)</u></p><br><br><br>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/mdrayhan.chowdhury.904">Donate
+                Now</a><br><br><br>
+            <h1 id="odp">Our Donate plan</h1><br>
+            <p id="weare">We are able to distribute your donation properly among poor people. We are asking for help for
+                those people who are not getting food or shelter.</p>
+        </div>
 
     </section>
 </body>
