edocation and poor people added

--- a/index.html
+++ b/index.html
@@ -39,9 +39,32 @@
             <h1 id="odp">Our Donate plan</h1><br>
             <p id="weare">We are able to distribute your donation properly among poor people. We are asking for help for
                 those people who are not getting food or shelter.</p>
+        </div><br><br><br>
+        <div id="three">
+            <div class="ed">
+                <img src="icon/fa.png" alt="">
+                <h1 id="Education">Education for a child</h1>
+                <p class="poor">We will do school. All children can get a good education. Education is the backbone of
+                    the
+                    nation.</p>
+            </div>
+            <div class="edd">
+                <img src="icon/s.png" alt="">
+                <h1 id="Shelter">Shelter for a poor family</h1>
+                <p class="poorr">Averages are needed to live in all families. Because cold rain makes it difficult for
+                    them
+                    to stay.
+                </p>
+            </div>
+            <div class="eddd">
+                <img src="icon/f.png" alt="">
+                <h1 id="Food">Food for poor people</h1>
+                <p class="poorrr">Our first goal is to deliver food to all poor people. May they eat food.
+                </p>
+            </div>
         </div>
-
     </section>
+
 </body>
 
 </html>
