section one and tow added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,33 @@
                 </p>
             </div>
         </div>
-    </section>
+    </section><br><br><br><br>
+    <section id="sectionone">
+        <div class="halfe-withe"><br><br><br><br><br><br><br>
+            <h1 id="Their-lives">Their lives depend on your donation.</h1>
+            <p id="They-don">They don't get proper food, shelter, or education due to a lack of money, so they need
+                donations. Our
+                small donation can be another family's smile</p>
+            <a id="Contribute" target="_blank" href="https://www.facebook.com/mdrayhan.chowdhury.904">How to Contribute?
+            </a>
+        </div>
+        <div class="halfe-withe">
+            <img src="image/donation0.jpg" alt="">
+        </div>
+    </section><br><br><br><br>
+    <section id="sectiontow">
+        <div class="halfe-withe">
+            <img src="image/donation13.jpg" alt="">
+        </div>
+        <div class="halfe-withe"><br><br><br><br><br><br><br><br><br>
+            <h1 id="They-need">They need us to survive.</h1>
+            <p id="A-poor">A poor family depends on us. Because they don't have money to buy food during this calamity.
+                So they expect help from other people at this time.</p>
+            <a id="How-to" target="_blank" href="https://www.facebook.com/mdrayhan.chowdhury.904">How to Contribute?
+            </a>
+        </div>
+
+    </section><br><br><br><br>
 
 </body>
 
