updet and footer added

--- a/index.html
+++ b/index.html
@@ -90,7 +90,24 @@
         </div>
 
     </section><br><br><br><br>
+    <section>
+        <div>
+            <h1 id="get"><b>get my updates</b></h1>
+            <p class="We-will">We will help some new poor people every day.They must be saved.</p>
+            <p class="We-will">That will be our first goal.</p>
+        </div><br><br>
+        <div id="input-one">
+            <input type="email">
+            <button id="subscribe"> subscribe</button>
+        </div><br><br>
+    </section>
 
 </body>
+<footer>
+    <div id="Be-Humble"><br><br>
+        <h1 id="color">Be Humble</h1>
+        <h5>i'm gonna do it</h5><br><br>
+    </div>
+</footer>
 
 </html>
